# CHI-OPEIS

./: .gitignore  AGENTS.md  CHI-OPEIS.spec  README.md  build.bat  cfx原位阻抗脚本知识库.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  configuration.md  domain.md  examples.md  packaging.md  testing.md  usage.md
docs/superpowers/plans/: 2026-07-11-global-optimization.md
scripts/: build_release.ps1
src/chi_generator/: __init__.py  app.py  main.py
src/chi_generator/domain/: __init__.py  calculations.py  models.py  rendering.py  service.py  validation.py
src/chi_generator/services/: __init__.py  presets.py  script_generation.py
src/chi_generator/ui/: __init__.py  adapters.py  errors.py  issue_list.py  main_window.py  models.py  parsers.py  planning.py  presets.py  preview_chart.py  script_output.py  theme.qss  widgets.py
src/opeis_master/: __init__.py  app.py  main.py
src/opeis_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/opeis_master/core/: __init__.py  enums.py  models.py  renderer.py  service.py  validator.py
src/opeis_master/domain/: __init__.py  calculations.py  contracts.py  enums.py  models.py  renderer.py  services.py  validation.py  validator.py
src/opeis_master/gui/: __init__.py  main_window.py  models.py
src/opeis_master/models/: __init__.py  configuration.py  enums.py  script_step.py  validation.py
src/opeis_master/renderers/: __init__.py  chi_renderer.py  save_naming.py
src/opeis_master/ui/: __init__.py  adapters.py  main_window.py  models.py  (+2 more)
tests/: conftest.py  test_chi_generator_contracts.py  test_chi_generator_planning.py  test_core_renderer_contracts.py  test_domain_renderer.py  test_domain_validation.py  test_future_planning_contracts.py  test_gui_layout_contracts.py  test_gui_refresh_contracts.py  test_gui_smoke.py  test_legacy_entrypoints.py  test_packaged_entrypoint.py  test_packaging_docs.py  test_preset_migration_contracts.py  test_risk_confirmation_contracts.py  test_sequence_timeline_contracts.py  test_three_mode_regression.py  test_ui_structure.py  test_validation_risk_and_basis_contracts.py
tests/domain/: test_service_facade.py
tests/models/: test_configuration_models.py
tests/support/: factories.py
